# mirror

./: .cspell.json  .editorconfig  .eslintrc.mjs  .gitignore  CHANGELOG.md  README.md  additional.md  bootstrap.lua  build.ps1  cliff.toml  eslint.config.mjs  flake.nix  package.json  pnpm-lock.yaml  repro.lua  stylua.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: release.yaml
changelog/: 2024-08-27.md  2024-09-30.md  2024-11-19.md  2024-11-25.md  2024-11-26.md  2024-11-29.md  2024-12-03.md  2024-12-07.md  2024-12-08.md  2024-12-09.md  2024-12-13.md  2024-12-14.md  2024-12-25.md  2025-01-02.md  2025-01-05.md  2025-01-07.md  2025-01-10.md  2025-01-14.md  2025-01-16.md  2025-01-20.md  2025-01-22.md  2025-01-24.md  2025-02-09.md  2025-02-11.md  2025-02-12.md  2025-02-20.md  2025-02-24.md  2025-02-25.md  2025-02-26.md  2025-02-27.md  2025-02-28.md  2025-03-03.md  2025-03-04.md  2025-03-06.md  2025-03-07.md  2025-03-08.md  2025-03-09.md  2025-03-12.md  2025-03-13.md  2025-03-14.md  (+20 more)
changelog/2024/: 2024-09-05.md  2024-09-12.md  2024-10-12.md  2024-11-02.md  2024-11-04.md  2024-11-22.md  2024-11-24.md  (+6 more)
doc/: CopilotChat.txt  blink-cmp.txt  colorizer.txt  recipes.md  sidekick.nvim.txt
lua/: colorizer.lua
plugin/: blink-pairs.lua  colorizer.lua
script/: doc.mjs  fetch.mjs  gen-readme.mjs  push.mjs  refresh.mjs  resource.json  sync.mjs
scripts/: start_minimal.sh
spec/: integration_spec.lua  utils_spec.lua
spectre_oxi/: Cargo.toml
spectre_oxi/src/: lib.rs
src/: buffer.rs  lib.rs
test/: .gitignore  expect.txt  expectation.txt  minimal.lua
(+313 files in other folders)
