[package]
name = "spectre_oxi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", branch = "main", features=["neovim-nightly"] }
fancy-regex = "0.13.0"
lazy_static = "1.4.0"

